fix iframe width on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,10 @@ a::selection {
 
 @media screen and (max-width: 999px) {
 
+  iframe {
+    width: 100%;
+  }
+
   button,
   .nav-user,
   #upload,
